--- a/src/App.css
+++ b/src/App.css
@@ -80,8 +80,10 @@
 	font-size: 2.3rem;
 	text-align: center;
 
+	min-height: 60px;
+	min-width: 60px;
+	border: 1px solid black;
 	border-radius: 50%;
-
 	margin: 15px;
 	margin-top: 5px;
 	margin-bottom: 5px;
