--- a/src/App.css
+++ b/src/App.css
@@ -1,147 +1,157 @@
 .fathercard {
-	padding-top: 50px;
-	background-image: linear-gradient(rgb(183, 234, 141), rgb(130, 210, 54));
-	min-height: 100vh;
+  padding-top: 50px;
+  background-image: linear-gradient(rgb(183, 234, 141), rgb(130, 210, 54));
+  min-height: 100vh;
 }
 .card {
-	border: 1px black solid;
+  border: 1px black solid;
 
-	width: 360px;
-	min-height: 500px;
-	display: flex;
-	flex-direction: column;
+  width: 360px;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
 
-	margin: auto;
+  margin: auto;
 }
 .tittle {
-	margin-top: 15px;
-	text-align: center;
+  margin-top: 15px;
+  text-align: center;
 }
 .card h6 {
-	text-align: center;
-	font-weight: 400;
+  text-align: center;
+  font-weight: 400;
 }
 /* Estilo para el contenedor del formulario */
 .form-container {
-	max-width: 350px;
-	margin: 5px auto;
-	padding: 15px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	background-color: #fff;
-	text-align: center;
+  max-width: 350px;
+  margin: 5px auto;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  text-align: center;
 }
 
 /* Estilo para los elementos del formulario */
 .form-container label {
-	display: block;
-	margin-bottom: 5px;
+  display: block;
+  margin-bottom: 5px;
 }
 
 .form-container input[type="text"],
 .form-container input[type="email"],
 .form-container input[type="password"] {
-	width: 100%;
-	padding: 10px;
-	margin-bottom: 10px;
-	border: 1px solid #ccc;
-	border-radius: 3px;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
 
 .form-container button {
-	background-color: #22ab34;
-	color: #fff;
-	border: none;
-	width: 100%;
-	border-radius: 10px;
-	padding: 10px 10px;
-	cursor: pointer;
-	transition: 0.1s;
+  background-color: #22ab34;
+  color: #fff;
+  border: none;
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px 10px;
+  cursor: pointer;
+  transition: 0.1s;
 }
 
 /* Estilo para el botón cuando se coloca el cursor sobre él */
 .form-container button:hover {
-	background-color: #3c8618;
+  background-color: #3c8618;
 }
 .error {
-	border-radius: 10px;
+  border-radius: 10px;
 
-	color: #9c2626;
-	text-align: center;
-	margin-top: 1rem;
-	padding: 10px;
-	transition: 0.3s;
+  color: #9c2626;
+  text-align: center;
+  margin-top: 1rem;
+  padding: 10px;
+  transition: 0.3s;
 }
 .error:hover {
-	background-color: pink;
+  background-color: pink;
 }
 .icons {
-	font-size: 2.3rem;
-	text-align: center;
+  font-size: 2.3rem;
+  text-align: center;
 
-	min-height: 60px;
-	min-width: 60px;
-	border: 1px solid black;
-	border-radius: 50%;
-	margin: 15px;
-	margin-top: 5px;
-	margin-bottom: 5px;
+  min-height: 60px;
+  min-width: 60px;
+  border: 1px solid black;
+  border-radius: 50%;
+  margin: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 .icons-menu {
-	margin: 5px;
-	text-align: center;
-	display: flex;
-	justify-content: center;
+  margin: 5px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .modal {
-	background: rgba(0, 0, 0, 0.5);
-	position: fixed;
-	height: 100vh;
-	width: 100%;
-	top: 0;
-	left: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	visibility: hidden;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
 }
 
 .modal.show {
-	visibility: visible;
+  visibility: visible;
 }
 
 .modal .content {
-	background: black;
-	padding: 2rem;
-	width: 90%;
-	max-width: 600px;
-	border-radius: 4px;
-	min-height: 300px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	opacity: 0;
-	transform: translateY(50%);
+  background: black;
+  padding: 2rem;
+  width: 90%;
+  max-width: 600px;
+  border-radius: 4px;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transform: translateY(50%);
 }
 
 .modal.show .content {
-	transition: all 0.2s ease-in-out;
-	opacity: 1;
-	transform: translateY(0);
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .modal .content h2 {
-	margin-bottom: 1.5rem;
-	text-transform: capitalize;
-	color: white;
+  margin-bottom: 1.5rem;
+  text-transform: capitalize;
+  color: white;
 }
 
 .modal .content p {
-	font-size: 18px;
-	color: white;
-	text-align: center;
-	margin-bottom: 2rem;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.header {
+  background-color: rgba(0, 0, 0, 0.761);
+  text-align: center;
+  color: white;
+}
+
+.header h1 {
+  margin: 0;
 }
